--- a/main.tex
+++ b/main.tex
@@ -24,5 +24,6 @@ Hello! These are my notes for analysis, which I have typed up to save to github 
 \pagebreak
 
 \section{Propositional and First-Order Logic}
+Hello
 
 \end{document}
